--- a/webtech.html
+++ b/webtech.html
@@ -7,8 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <script>
-    document.write("Hello world!");
-    </script>
+    <h1>Hello world!</h1>
+    <h2>Dit is website van Said Salikhov.</h2>
 </body>
 </html>
