--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <h1>Hello world!</h1>
     <h2>Dit is website van Said Salikhov.</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae sed assumenda ut rerum quam, velit ab molestiae dolor maxime. Aperiam, doloribus tempore. Quod officia, corrupti error perferendis libero facilis quisquam.</p>
 </body>
 </html>
